# Duke4_20011026_CMake

./: LICENSE  README.md  build_vc6.cmd  build_vc6_debug.cmd  build_vc6_release.cmd  generate_vc17.cmd
Duke4/: .gitignore  CMakeLists.txt  CMakePresets.json
Duke4/Cannibal/: CMakeLists.txt
Duke4/CannibalEditor/: CMakeLists.txt
Duke4/CannibalEditor/vidd3d/: CMakeLists.txt
Duke4/CannibalEditor/vidglide/: CMakeLists.txt
Duke4/CblMacEd/: CMakeLists.txt
Duke4/D3DDrv/Src/: CMakeLists.txt
Duke4/DukeEd/: CMakeLists.txt
Duke4/Editor/Src/: CMakeLists.txt
Duke4/Engine/Src/: CMakeLists.txt
Duke4/Fire/Src/: CMakeLists.txt
Duke4/Galaxy/Src/: CMakeLists.txt
Duke4/GalaxyLib/: CMakeLists.txt
Duke4/GlideDrv/Src/: CMakeLists.txt
Duke4/Imp3DS/: CMakeLists.txt
Duke4/ImpBP2/: CMakeLists.txt
Duke4/ImpC3S/: CMakeLists.txt
Duke4/ImpGMA/: CMakeLists.txt
Duke4/ImpLWO/: CMakeLists.txt
Duke4/ImpMDX/: CMakeLists.txt
Duke4/Launch/Src/: CMakeLists.txt
Duke4/SoftDrv/Src/: CMakeLists.txt
Duke4/UCC/Src/: CMakeLists.txt
Duke4/UWeb/Src/: CMakeLists.txt
Duke4/xcore/: CMakeLists.txt
Duke4/ximage/: CMakeLists.txt
VS6/: .gitignore  Masm.props
